[package]
name = "serenity-lavalink"
version = "0.1.0"
authors = ["sponges <spongybacon@hotmail.co.uk>", "Zeyla Hellyer <zey@zey.moe>"]

[dependencies]
evzht9h3nznqzwl = "0.0.3"
hyper = "~0.10"
#lavalink = { git = "https://github.com/serenity-rs/lavalink.rs" }
lavalink = { path = "../lavalink.rs" }
log = "~0.3"
parking_lot = "^0.5"
percent-encoding = "1.0.0"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"

[dependencies.serenity]
git = "https://github.com/zeyla/serenity"
branch = "v0.5.0"
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "utils"]
