[package]
name = "serenity-lavalink"
version = "0.1.0"
authors = ["sponges <spongybacon@hotmail.co.uk>", "Zeyla Hellyer <zey@zey.moe>"]

[dependencies]
evzht9h3nznqzwl = "0.0.3"
hyper = "~0.10"
lavalink = { git = "https://github.com/serenity-rs/lavalink.rs" }
log = "~0.3"
parking_lot = "^0.5"
percent-encoding = "1.0.0"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"

[dependencies.serenity]
default-features = false
features = ["client"]
version = "~0.5"
